# tcg-scan-web-app-

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_GUIDE.md  CURSOR_CONTEXT.md  LICENSE  README.md  TCG_Scan_Phase1.docx  TCG_Scan_Phase1.md  build_docx.js  cursor_commands.md  package.json  pnpm-lock.yaml  pyproject.toml  railway.toml  sre.md  turbo.json  vercel.json
.cursor/: commands.md
.github/workflows/: ci.yml  grafana.yml  release.yml
apps/api/: AGENTS.md  Dockerfile  alembic.ini  package.json  pyproject.toml  railway.toml
apps/api/.claude/skills/run-api/: SKILL.md  smoke.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_users_portfolio_alerts.py  0003_stripe_customer.py  0004_population_saved_searches.py  0005_watchlist.py  0006_user_comps_days.py  0007_user_role.py  0008_supabase_user_id.py  0009_drop_clerk_id.py  0010_catalog_source_runs.py  0011_marketplace_listings.py  0012_catalog_import_runs.py
apps/api/docs/: endpoints.md
apps/api/tcgscan_api/: config.py  cors.py  errors.py  logging_setup.py  main.py  seed.py  telemetry.py
apps/api/tcgscan_api/db/: __init__.py  models.py  session.py
apps/api/tcgscan_api/middleware/: auth.py  rate_limit.py
apps/api/tcgscan_api/repositories/: admin.py  cards.py  fx.py  market.py  marketplace_listings.py  sales.py  source_runs.py  users.py
apps/api/tcgscan_api/routes/: admin.py  billing.py  cards.py  ebay.py  health.py  insights.py  market.py  portfolio.py  scan.py  searches.py  watchlist.py
apps/api/tcgscan_api/services/: admin_sources_status.py  agents_bridge.py  auth_ctx.py  billing.py  cache.py  cards.py  catalogue_import.py  catalogue_ingest.py  catalogue_normalizer.py  digest.py  ebay_account_deletion.py  ebay_affiliate.py  ebay_ingest.py  ebay_normalizer.py  grade_roi.py  image_crop.py  market.py  market_region.py  marketplace_search.py  ml_client.py  portfolio.py  qdrant.py  roles.py  saved_searches.py  scan.py  slug.py  source_audit.py  tier.py  watchlist.py
apps/api/tcgscan_api/sources/: __init__.py  dragon_ball_fusion_world.py  dragon_ball_masters.py  ebay_browse.py  http_client.py  one_piece.py  pokemon.py  scryfall.py  ygoprodeck.py
apps/api/tests/: conftest.py  telemetry_helpers.py  test_admin.py  test_auth_production.py  test_billing_logging.py  test_cards_route.py  test_catalogue.py  test_catalogue_import.py  test_cors.py  test_ebay_account_deletion.py  test_ebay_ingest.py  test_grade_roi.py  test_health.py  test_http_client_logging.py  test_ingest_logging.py  test_market_region.py  test_market_route.py  test_marketplace_search.py  test_me.py  test_ml_client_logging.py  test_portfolio.py  test_redis_logging.py  test_repositories.py  test_roles.py  test_saved_searches.py  test_scan.py  test_scan_logging.py  test_scan_telemetry.py  test_slug.py  test_source_audit.py  test_source_prices.py  test_sources.py  test_telemetry.py  test_tier.py  test_watchlist.py  test_week6_12.py
apps/ml/: AGENTS.md  app.py  contracts.md  package.json  pyproject.toml
apps/ml/eval/: README.md
apps/ml/eval/fixtures/: sample.csv
apps/ml/tcgscan_ml/eval/: runner.py
apps/ml/tcgscan_ml/grade/: __init__.py  heuristic.py  psa.py
apps/ml/tests/: test_contracts.py  test_grade_heuristic.py  test_logging.py
apps/ml/weights/: manifest.toml
apps/web/: AGENTS.md  next.config.ts  package.json  tsconfig.tsbuildinfo
apps/web/public/: sw.js
apps/web/src/: middleware.ts
apps/worker/: AGENTS.md  Dockerfile  package.json  pyproject.toml  railway.toml
apps/worker/tcgscan_worker/: __main__.py  db_bridge.py  embedding.py  http.py  rollup.py  schedules.py  worker.py
apps/worker/tcgscan_worker/alerts/: monitor.py
apps/worker/tcgscan_worker/catalog/: __init__.py  base.py  lorcana.py  mtg.py  one_piece.py  pokemon.py  runner.py  sports.py  yugioh.py
apps/worker/tcgscan_worker/digest/: runner.py
apps/worker/tcgscan_worker/pricing/: __init__.py  fx.py  ingest.py
apps/worker/tcgscan_worker/sources/: __init__.py  base.py  cardmarket.py  ebay_active.py  ebay_auth.py  ebay_sold.py  fx.py  grade_parse.py  psa_pop.py  registry.py  tcgplayer.py
apps/worker/tcgscan_worker/workflows/: __init__.py  activities.py  alert_workflow.py  catalog_workflow.py  digest_workflow.py  ebay_workflow.py  pricing_workflow.py  rollup_workflow.py
apps/worker/tests/: test_catalog.py  test_grade_parse.py  test_http.py  test_pricing_ingest.py  test_runtime_logging.py  test_sources.py  test_sources_logging.py  test_sports_catalog.py  test_worker.py
docs/: CLERK_REMOVAL_AND_SUPABASE_AUTH_REPORT.md  LIVE_DATA_AND_STRIPE_SETUP.md  LIVE_DATA_API_AUDIT.md  PROJECT_TRACKING.md  SUPABASE_AUTH_AUDIT.md  SUPABASE_AUTH_FINAL_FIX_REPORT.md  SUPABASE_AUTH_IMPLEMENTATION_REPORT.md  SUPABASE_AUTH_MIGRATION_GUIDE.md  data-sources.md
docs/adr/: 0001-otel-only-observability.md  _template.md
docs/runbooks/: app-store-distribution.md  beta-launch.md  worker-cron.md
infra/alloy/: Dockerfile  config.alloy  docker-entrypoint.sh  railway.toml
infra/docker/: docker-compose.yml
infra/grafana/: .gitignore  .terraform.lock.hcl  README.md  alerts.tf  dashboards.tf  folders.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+109 files in other folders)
