[project]
name = "tcg-scan"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/worker",
    "apps/ml",
    "packages/sdk-py",
    "packages/agents",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.12",
    "mypy>=1.15.0",
    "httpx>=0.28.1",
    "respx>=0.22.0",
    "aiosqlite>=0.21.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
]
