[project]
name = "tcgscan-api"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "structlog>=25.4.0",
    "httpx>=0.28.1",
    "sqlalchemy[asyncio]>=2.0.41",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.16.1",
    "tenacity>=9.1.4",
    "qdrant-client>=1.14.0",
    "redis>=5.2.1",
    "pgvector>=0.4.0",
    "python-multipart>=0.0.20",
    "stripe>=11.0.0",
    "tcgscan-sdk-py",
    "tcgscan-agents",
    "tcgscan-ml",
    "pillow>=11.2.1",
    "pyjwt>=2.13.0",
    "cryptography>=46.0.7",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "opentelemetry-instrumentation-asgi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-instrumentation-redis>=0.49b0",
]

[tool.uv.sources]
tcgscan-sdk-py = { workspace = true }
tcgscan-agents = { workspace = true }
tcgscan-ml = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.12",
    "mypy>=1.15.0",
    "httpx>=0.28.1",
    "respx>=0.22.0",
    "aiosqlite>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tcgscan_api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: integration tests (docker required)"]
