[project]
name = "tcgscan-ml"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "modal>=0.74.62",
    "pydantic>=2.11.5",
    "structlog>=25.4.0",
    "pillow>=11.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.12",
    "mypy>=1.15.0",
    "pillow>=11.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tcgscan_ml"]

[tool.hatch.build.targets.wheel.force-include]
"tcgscan_ml/py.typed" = "tcgscan_ml/py.typed"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true
