[project]
name = "tcgscan-worker"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.11.1",
    "structlog>=25.4.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "tenacity>=9.1.4",
    "sqlalchemy[asyncio]>=2.0.41",
    "asyncpg>=0.30.0",
    "qdrant-client>=1.14.0",
    "tcgscan-api",
    "tcgscan-agents",
]

[tool.uv.sources]
tcgscan-api = { workspace = true }
tcgscan-agents = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.12",
    "mypy>=1.15.0",
    "respx>=0.22.0",
    "aiosqlite>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tcgscan_worker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
